# HelloWe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-wechat.yml
articles/2025/01-hello-world/: index.md
articles/2025/02-image-test/: index.md
articles/2025/03-developer-daily/: index.md
config/: published.json  settings.json
docs/: github_wechat_auto_publish.md
scripts/: create_summary.py  detect_changes.py  generate_daily_images.py  generate_test_images.py  requirements.txt  wechat_publisher.py
