[project]
name = "hellowe"
version = "0.1.0"
description = "自动发布微信公众号文章的工具"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "markdown>=3.5.1",
    "pygments>=2.16.1",
]
requires-python = ">=3.8"

[project.scripts]
detect-changes = "scripts.detect_changes:main"
publish-wechat = "scripts.wechat_publisher:main"
create-summary = "scripts.create_summary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]